--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,15 +16,21 @@ html
         link(rel="shortcut icon" href="/images/b.png")
 
     body
-        div(class="ui basic modal")
+        div(id="modal2" class="ui modal")
+            div(class="ui hidden divider")
+            div(class="ui centered container")
+                div(id="sc1" class="scrolling content")
+                    div(class="ui hidden divider")
+            div(class="ui hidden divider")
+
+        div(id="modal1" class="ui basic modal")
             div(class="ui center aligned container")
-                div(class="content")
+                div(id="error_content2" class="content")
                     | The input value is invalid...
                 div(class="ui hidden divider")
                 div(class="actions")
                     div(class="ui green cancel inverted button")
                         | OK
-
         div(id="container1" class="ui container")
             div(class="ui one column doubling stackable center aligned grid container")
                 div(id="search1" class="column")
@@ -35,12 +41,14 @@ html
                             | Block Chain Search Engine
                     div(class="ui hidden divider")
                     div(id="input_div" class="ui big fluid action input")
-                        input(id="input1" type="text", placeholder="Search for a block...")
+                        input(id="input1" type="text", placeholder="Search for a block...e.g. block height or block hash")
                         button(id="button1" class="ui primary right submit button")
-                            i(class="search icon")
+                            i(id="i1" class="search icon")
 
                     div(class="ui hidden divider")
-            div(class="ui two column doubling stackable grid container")
-                div(id="link1", class="content")
+            div(class="ui one column doubling stackable centered grid container")
+                div(id="link1" class="centered column")
+
+
 
         //block content
