--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,7 +26,7 @@ html
         div(id="modal1" class="ui basic modal")
             div(class="ui center aligned container")
                 div(id="error_content2" class="content")
-                    | The input value is invalid...
+                    | The input value is invalid
                 div(class="ui hidden divider")
                 div(class="actions")
                     div(class="ui green cancel inverted button")
